--- a/assets/css/styles-2.css
+++ b/assets/css/styles-2.css
@@ -166,6 +166,9 @@ p {
   margin-top: 0;
   margin-bottom: 20px;
 }
+.main-wrapper .subsection-title {
+  font-size: 18px;
+}
 .main-wrapper .section-title .fa {
   width: 30px;
   height: 30px;
